--- a/beholder-recorder/uwsgi.ini
+++ b/beholder-recorder/uwsgi.ini
@@ -14,10 +14,12 @@ vacuum = true                        ; Delete sockets during shutdown
 single-interpreter = true            ; we are only running pythons
 die-on-term = true                   ; Shutdown when receiving SIGTERM (default is respawn)
 need-app = true                      ; do not start if workers do not start
-harakiri = 30                        ; forcefully kill workers after 30 seconds
+harakiri = 90                        ; forcefully kill workers after 30 seconds
 post-buffering = true                ; seems useful for correct harakiri working
 auto-procname = true                 ; Name procs using uWSGI-worker/master
 procname-prefix = beholder-
+
+static-map = /video=./tmp/test
 
 min-worker-lifetime = 10             ; worker always kept alive for 10 seconds
 
