--- a/beholder-recorder/uwsgi.ini
+++ b/beholder-recorder/uwsgi.ini
@@ -19,7 +19,7 @@ post-buffering = true                ; seems useful for correct harakiri working
 auto-procname = true                 ; Name procs using uWSGI-worker/master
 procname-prefix = beholder-
 
-static-map = /video=./tmp/test
+static-map = /video=/tmp/test
 
 min-worker-lifetime = 10             ; worker always kept alive for 10 seconds
 
