refresh image and initialize password

--- a/beholder-recorder/Makefile.webapp
+++ b/beholder-recorder/Makefile.webapp
@@ -6,7 +6,13 @@ include ../common.mk
 
 build: install
 
-install: uwsgi_metrics
+install: uwsgi_metrics initialize
+
+initialize:
+	database=$(awk -F "=" '/database/ {print $$2}' /home/beholder/Desktop/beholder.ini)
+	username=$(awk -F "=" '/username/ {print $$2}' /home/beholder/Desktop/beholder.ini)
+	password=$(awk -F "=" '/password/ {print $$2}' /home/beholder/Desktop/beholder.ini)
+	$(VIRTUALENV)/bin/flask users create $email --password $password --active
 
 uwsgi_metrics:
 	mkdir -p uwsgi_metrics
