--- a/beholder-recorder/Makefile.webapp
+++ b/beholder-recorder/Makefile.webapp
@@ -9,9 +9,11 @@ build: install
 install: uwsgi_metrics initialize
 
 initialize:
-	username=$(awk -F "=" '/username/ {print $$2}' /home/beholder/Desktop/beholder.ini)
-	password=$(awk -F "=" '/password/ {print $$2}' /home/beholder/Desktop/beholder.ini)
-	$(VIRTUALENV)/bin/flask users create $email --password $password --active
+	$(VIRTUALENV)/bin/flask init-db
+	$(VIRTUALENV)/bin/flask users create \
+		$(shell awk -F "=" '/username/ {print $$2}' /home/${USER}/Desktop/beholder.ini) \
+		--password $(shell awk -F "=" '/password/ {print $$2}' /home/${USER}/Desktop/beholder.ini) \
+		--active || echo "already exists"
 
 uwsgi_metrics:
 	mkdir -p uwsgi_metrics
