create db from scratch on first startup

--- a/beholder-recorder/Makefile.webapp
+++ b/beholder-recorder/Makefile.webapp
@@ -6,14 +6,15 @@ include ../common.mk
 
 build: install
 
-install: uwsgi_metrics initialize
+install: uwsgi_metrics .dbinitialized
 
-initialize:
+.dbinitialized:
 	$(VIRTUALENV)/bin/flask init-db
 	$(VIRTUALENV)/bin/flask users create \
 		$(shell awk -F "=" '/username/ {print $$2}' /home/${USER}/Desktop/beholder.ini) \
 		--password $(shell awk -F "=" '/password/ {print $$2}' /home/${USER}/Desktop/beholder.ini) \
 		--active || echo "already exists"
+	touch .dbinitialized
 
 uwsgi_metrics:
 	mkdir -p uwsgi_metrics
