--- a/ops/recorder.service
+++ b/ops/recorder.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Beholder recorder
-After=network-online.target
+After=network-online.target beholder-startup.service
 Wants=network-online.target systemd-networkd-wait-online.service
 
 [Service]
